--- a/style.css
+++ b/style.css
@@ -6,19 +6,19 @@
   color: gainsboro;
   /* scroll-behavior: 1s smooth; */
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 /* body {
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(/img/sac.jpg);
+    url(../img/sac.jpg);
   background-size: 100% 100%;
 } */
 .home {
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(/img/sac.jpg);
+    url(./img/sac.jpg);
   height: 100vh;
   background-size: 100% 100%;
   border-bottom: 2px solid #009688;
@@ -45,7 +45,7 @@ html{
   /* border: 2px solid #009688; */
   /* text-decoration: none; */
 }
-.nav-list a{
+.nav-list a {
   text-decoration: none;
 }
 .nav-list a:hover {
@@ -53,10 +53,11 @@ html{
   transition: ease-in-out 0.5s;
   color: #009688;
 }
-.nav-list i:hover{
+.nav-list i:hover {
   border-bottom: 1px solid #009688;
   transition: ease-in-out 1s;
-  color: #009688;}
+  color: #009688;
+}
 .nav-list li {
   color: gainsboro;
   font-size: 16px;
@@ -103,7 +104,7 @@ p {
 }
 .container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(/img/wall.jpg);
+    url(./img/wall.jpg);
   background-size: 100% 100%;
   height: 150vh;
   /* border-bottom: 2px solid #009688; */
@@ -183,7 +184,7 @@ p {
   /* border: 2px solid black; */
   border-radius: 1rem;
   background-color: gainsboro;
-  /* background-image: url(/img/baby.jpg); */
+  /* background-image: url(./img/baby.jpg); */
   background-size: 100% 100%;
   box-shadow: 0px 0px 2px 2px #009688;
   /* color: #009688; */
@@ -242,7 +243,7 @@ p {
   /* justify-content: center; */
   /* align-items: center; */
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(/img/wall.jpg);
+    url(./img/wall.jpg);
   /* border-bottom:2px solid #009688; */
 }
 .SERVICES h1 {
@@ -268,7 +269,7 @@ p {
   /* border-top: 2px solid #009688; */
   align-items: center;
 }
-.callme{
+.callme {
   display: flex;
 }
 .form-callback {
@@ -339,7 +340,7 @@ label {
   color: #009688;
   cursor: pointer;
 }
-.classa a{
+.classa a {
   text-decoration: none;
 }
 .classa a:hover {
@@ -414,11 +415,11 @@ label {
 }
 .success {
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(/img/wall.jpg);
-height: 100vh;
+    url(./img/wall.jpg);
+  height: 100vh;
   background-size: 100% 100%;
 }
-.success h1{
+.success h1 {
   text-align: center;
   padding: 2rem;
   color: #009688;
@@ -432,15 +433,15 @@ height: 100vh;
   grid-template-columns: 25% 25% 25% 24%;
   gap: 5px;
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-          url(/img/wall.jpg);
+          url(./img/wall.jpg);
 
 background-size: 100% 100%;          /* border-radius: 10px; */
 }
- .box-1 {
+.box-1 {
   border: 2px solid #009688;
   padding: 12px;
   grid-column: 1/3;
-  background-image: url(/img/backyard.avif);
+  background-image: url(./img/backyard.avif);
   background-size: 100% 100%;
   /* text-align:; */
   border-radius: 10px;
@@ -449,43 +450,39 @@ background-size: 100% 100%;          /* border-radius: 10px; */
 .box-2 {
   border: 2px solid #009688;
   padding: 12px;
-  background-image: url(/img/gray-sofa-living-room-with-free-space_43614-893.avif);
+  background-image: url(./img/gray-sofa-living-room-with-free-space_43614-893.avif);
   background-size: 100% 100%;
   border-radius: 10px;
   color: #000;
-
 }
 .box-3 {
   border: 2px solid #009688;
   padding: 12px;
-  background-image: url(/img/premium_photo-1664287154461-a6e34aeb043e.avif);
+  background-image: url(./img/premium_photo-1664287154461-a6e34aeb043e.avif);
   background-size: 100% 100%;
   border-radius: 10px;
   color: #000;
-
 }
 .box-4 {
   border: 2px solid #009688;
   padding: 12px;
-  background-image: url(/img/loft-living-room-interior-design_53876-145499.avif);
+  background-image: url(./img/loft-living-room-interior-design_53876-145499.avif);
   background-size: 100% 100%;
   border-radius: 10px;
   color: #000;
-
 }
 .box-5 {
   border: 2px solid #009688;
   padding: 12px;
-  background-image: url(/img/baby.jpg);
+  background-image: url(./img/baby.jpg);
   background-size: 100% 100%;
   border-radius: 10px;
   color: #000;
-
 }
 .box-6 {
   border: 2px solid #009688;
   padding: 12px;
-  background-image: url(/img/Screenshot\ 2023-08-09\ 193118.png);
+  background-image: url(./img/Screenshot\ 2023-08-09\ 193118.png);
   background-size: 100% 100%;
   color: #000;
 
@@ -494,34 +491,34 @@ background-size: 100% 100%;          /* border-radius: 10px; */
 .box-7 {
   border: 2px solid #009688;
   padding: 12px;
-  background-image: url(/img/Screenshot\ 2023-08-09\ 192909.png);
+  background-image: url(./img/Screenshot\ 2023-08-09\ 192909.png);
   background-size: 100% 100%;
   color: #000;
 
   border-radius: 10px;
 }
-.part{
+.part {
   text-align: center;
   color: #009688;
   height: 50vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-  url(/img/wall.jpg);
+    url(./img/wall.jpg);
   align-items: center;
   background-size: 100% 100%;
 }
-.party{
+.party {
   padding-top: 3rem;
 }
-.partners{
+.partners {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
- padding-top: 7rem;
+  padding-top: 7rem;
 }
-.img11 img{
+.img11 img {
   height: 47px;
   width: 105px;
 }
-.btn a{
-text-decoration: none;
+.btn a {
+  text-decoration: none;
 }
